# Plugy-EX

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Common.cpp  Interface_Stats.cpp  NewInterface_Runewords.cpp  NewInterface_Stats.cpp  NewInterface_StatsPageTwo.cpp  NewInterfaces.cpp  PlugY.sln  README.md  common.h  newInterfaces.h  plugy graphics.rar
Commons/: CMakeLists.txt  D2Funcs.h  D2InitMacros.h  D2Macros.h  D2TypeDefMacros.h  D2TypeNameMacros.h  D2UnitStruct.h  VersionInfo.cpp  VersionInfo.h  d2BinFile.h  d2StringTblStruct.h  d2Struct.h  d2constants.h  updatingConst.h
Commons/cmake/: CommonsConfig.cmake.in
Commons/include/: D2UnitStruct.h  d2StringTblStruct.h  d2constants.h  updatingConst.h
Commons/includes/: D2UnitStruct.h  VersionInfo.h  d2BinFile.h  d2Struct.h
Commons/src/: VersionInfo.cpp
PlugY/: BigStash.cpp  CMakeLists.txt  ClientSaveFile.cpp  Commands.cpp  Common.cpp  D2TypeDefMacros.h  D2TypeNameMacros.h  D2functions.cpp  D2wrapper.cpp  EmptyPage.dc6  Error.cpp  ExtendedSaveFile.cpp  ExtraOptions.cpp  GlobalVariable.cpp  INIfile.cpp  INIfile.h  InfinityStash.cpp  Interface_Skills.cpp  Interface_Stash.cpp  Interface_Stats.cpp  Language.cpp  LoadPlayerData.cpp  LocalizedStrings.cpp  LocalizedStrings.h  MainScreen.cpp  ModifMemory.cpp  NewInterface_CubeListing.cpp  NewInterface_Runewords.cpp  NewInterface_Stats.cpp  NewInterface_StatsPageTwo.cpp  NewInterfaces.cpp  OthersFeatures.cpp  Parameters.cpp  PlayerCustomData.cpp  PlugY.cpp  PlugY.rc  PlugY.sln  PlugY.vcproj  PlugY.vcxproj  PlugY.vcxproj.filters  (+50 more)
PlugY.Tests/: CMakeLists.txt  initTests.cpp
PlugY/PCXFiles/: EmptyPage.pcx  SharedGoldBtns.pcx  StashBtns.pcx  StatsBackground.pcx  TradeStash.pcx  UnassignSkillsBtns.pcx  UnassignStatsBtns.pcx
PlugY/Tests/: initTests.cpp
PlugY/cmake/: PlugYConfig.cmake.in
PlugY/include/: D2TypeDefMacros.h  D2TypeNameMacros.h  INIfile.h  LocalizedStrings.h  bigStash.h  common.h  customLibraries.h  d2functions.h  d2wrapper.h  error.h  infinityStash.h  interface_Stash.h  language.h  loadPlayerData.h  mainScreen.h  modifMemory.h  newInterface_CubeListing.h  newInterface_Runewords.h  newInterface_Stats.h  newInterface_StatsPageTwo.h  parameters.h  playerCustomData.h  plugYFiles.h  statPerLevelUp.h  statsPoints.h  targetver.h  updateClient.h  updateServer.h  worldEvent.h
PlugY/src/: BigStash.cpp  Commands.cpp  Common.cpp  CustomLibraries.cpp  D2functions.cpp  D2wrapper.cpp  Error.cpp  ExtendedSaveFile.cpp  ExtraOptions.cpp  GlobalVariable.cpp  INIfile.cpp  InfinityStash.cpp  Interface_Skills.cpp  Interface_Stash.cpp  Interface_Stats.cpp  Language.cpp  LoadPlayerData.cpp  LocalizedStrings.cpp  MainScreen.cpp  ModifMemory.cpp  NewInterface_CubeListing.cpp  NewInterface_Runewords.cpp  NewInterface_Stats.cpp  NewInterface_StatsPageTwo.cpp  NewInterfaces.cpp  Parameters.cpp  PlayerCustomData.cpp  PlugY.cpp  PlugYFiles.cpp  SavePath.cpp  SavePlayerData.cpp  SharedSaveFile.cpp  SkillPerLevelUp.cpp  SkillsPoints.cpp  StatPerLevelUp.cpp  StatsPoints.cpp  UberQuest.cpp  UpdateClient.cpp  UpdateServer.cpp  WorldEvent.cpp
PlugYInstall/: PlugYInstall.cpp  PlugYInstall.rc  PlugYInstall.sln  PlugYInstall.vcxproj  PlugYInstall.vcxproj.filters
PlugYInstaller/: PlugY.ini  PlugY.nsi
PlugYRun/: PlugYRun.cpp  PlugYRun.rc  PlugYRun.sln  PlugYRun.vcxproj  PlugYRun.vcxproj.filters
